# minigamemaker-cpp

./: CMakeLists.txt  CMakePresets.json  vcpkg.json
src/: helloworld.cpp
